--- a/package.json
+++ b/package.json
@@ -14,30 +14,29 @@
   "description": "y",
   "devDependencies": {
     "nodemon": "^1.12.5",
-    "webpack": "^3.10.0",
+    "webpack": "^3.12.0",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
+    "capitalize": "^2.0.0",
+    "connected-react-router": "^6.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "esm": "^3.2.25",
     "express": "^4.16.2",
+    "faker": "^4.1.0",
     "generate-password": "^1.4.2",
     "handlebars": "^4.1.2",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
+    "mini-css-extract-plugin": "^0.8.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.10",
     "nodemailer": "^6.2.1",
     "password-hash": "^1.2.2",
-    "serialize-javascript": "^1.4.0",
-    "socket.io": "^2.2.0",
-    "axios": "^0.18.0",
-    "capitalize": "^2.0.0",
-    "connected-react-router": "^6.4.0",
-    "cors": "^2.8.5",
-    "faker": "^4.1.0",
-    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-chat-widget": "^2.1.4-1",
     "react-dom": "^16.8.6",
@@ -48,6 +47,8 @@
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^1.4.0",
+    "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0"
   },
