--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "description": "y",
   "devDependencies": {
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "nodemon": "^1.12.5",
     "webpack": "^3.12.0",
     "webpack-node-externals": "^1.6.0"
@@ -29,6 +30,7 @@
     "faker": "^4.1.0",
     "generate-password": "^1.4.2",
     "handlebars": "^4.1.2",
+    "html-webpack-plugin": "^3.2.0",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
