--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "module": "main.js",
   "scripts": {
-    "start": "nodemon -r esm server.js",
+    "start": "node -r esm server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
