--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node -r esm server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start-local" : "react-scripts start",
+    "start-server" : "nodemon -r esm server.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
